# profiles

./: .pre-commit-config.yaml  Dockerfile  blog.db  docker-compose.yaml  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml
src/profiles/: __main__.py
src/profiles/application/common/: application_error.py
src/profiles/application/models/: profile.py
src/profiles/application/ports/: committer.py  event_raiser.py  id_generator.py  identity_provider.py  profile_gateway.py  time_provider.py
src/profiles/bootstrap/: config.py  container.py  providers.py
src/profiles/bootstrap/entrypoints/: api.py  cli.py  stream.py  tasks.py
src/profiles/domain/profile/: events.py  factory.py  profile.py  profile_id.py  repository.py  value_objects.py
src/profiles/domain/shared/: entity.py  events.py  value_object.py
src/profiles/infrastructure/: domain_events.py  profile_factory.py  utc_time_provider.py  uuid7_id_generator.py
src/profiles/infrastructure/outbox/: outbox_gateway.py  outbox_processor.py  outbox_publisher.py  outbox_storing_handler.py  process_outbox_cron_task.py
src/profiles/infrastructure/persistence/: sql_tables.py  transaction.py
src/profiles/presentation/api/: exception_handlers.py  htpp_identity_provider.py
src/profiles/presentation/cli/: server_starting.py
src/profiles/presentation/stream/: exception_handlers.py  (+1 more)
src/users/: __main__.py
src/users/bootstrap/: config.py  container.py  providers.py
src/users/infrastructure/: domain_events.py  fake_identity_provider.py  user_factory.py  utc_time_provider.py  uuid7_id_generator.py
(+95 files in other folders)
